methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:5: error: ';' expected but 'if' found.
while (haveBaggle()) {if (haveBaggle()) {return} else {droite();avance();gauche();p=p+1} if (p==7) {return} }
                                                                                         ^